desenvolvimwento de frontend com menu

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <div class="navbar-brand">MyApp</div>
+  <div class="navbar-brand">Crescente</div>
   <button class="navbar-toggle" (click)="toggleMenu()">
     &#9776; <!-- Ícone de menu -->
   </button>
