--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<h2 class="center">Sempre é importante evoluir...</h2>
+<div>
+    <img [src]="imagemurl" [alt]="altImagem">
+</div>
+<app-footer></app-footer>
