desenvolvimento completo um site simples

--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -1,1 +1,8 @@
-<p>contato works!</p>
+<h2 class="center">Contato</h2>
+
+<P>Contato 2196972628, Siou Gustavo Gregorio, desenvolvenro Seniro na empresa Solutis, tenho 5 anos de 
+   experiencia com linguagem C#, .net, trabalhei 1 mes com node js e angular jpa trabalhei 3 anos, gosto 
+   muito de estuidar e me desenvolver profissionalmente, para crecser e evoluir sempre me aprimorando da melhor
+   forma.
+</P>
+<app-footer></app-footer>
