--- a/src/app/pages/estudo/estudo.component.html
+++ b/src/app/pages/estudo/estudo.component.html
@@ -1,1 +1,8 @@
-<p>estudo works!</p>
+<h2 class="center">{{ title }}</h2>
+<div class="center">
+    <img [src]="devestudo" [alt]="altDevestudo"/>
+</div>
+<div class="center">
+    <img [src]="desenvolverurl" [alt]="devAlt"/>
+</div>
+<app-footer></app-footer>
