--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -1,1 +1,12 @@
-<p>sobre works!</p>
+<h2>Sobre</h2>
+<p>Aprofundar melhro nos sistema sempre faz be,m, agente aprende demais, e cerscer bastante, a wevolução faz parte da regra do negocio e
+    sempre vai estar presente no aprendizado, para evoluir mais rapdio e podermos aprofundar melhor
+</p>
+<p>O desenvolvimento de sistemas é um processo que envolve a criação de softwares e hardwares para atender às necessidades de empresas e usuários. 
+    O processo de desenvolvimento de sistemas pode ser dividido em algumas etapas, como: Análise das necessidades dos usuários e da empresa, Design do sistema, Codificação, Testes, Documentação. 
+    O profissional responsável por desenvolver sistemas é o desenvolvedor de sistemas, que deve pensar na usabilidade dos programas para que eles sejam eficientes.
+</p>
+<div class="center">
+    <img [src]="urlimagem" [alt]="devAlt">
+</div>
+<app-footer></app-footer>
